--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId><java-core></java-core></groupId>
+      <artifactId>java-core</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>6.1.4</version>
