--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
   <url>http://maven.apache.org</url>
    <properties>
 	<java.version>1.8</java.version>
-	<sonar.host.url>http://3.110.43.163:9000/</sonar.host.url>
-	<sonar.login>squ_05b942199f1af4c0b2a9ea6f3267e8fb84996772</sonar.login>
+	<sonar.host.url>http://3.110.48.220:9000/</sonar.host.url>
+	<sonar.login>admin</sonar.login>
+	<sonar.password>sonar</sonar.password>
    </properties>
   <dependencies>
     <dependency>
